[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
py-cord="2.0.0b5"
discord="^1.7.3"
Pillow = "^9.1.1"
youtube_dl = "^2021.12.17"
redditeasy = "^4.0.0"
Flask = "^2.1.2"
requests = "^2.27.1"
"discord.py" = "^2.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"